refugee_code_update

--- a/templates/remove.html
+++ b/templates/remove.html
@@ -1,9 +1,18 @@
 {% extends 'template.html' %}
 
-
 {% block content %}
-<div class="container">
-    <table class="table">
+
+    <div class="container">
+            {% with messages = get_flashed_messages() %}
+            {% if messages %}
+                <ul class=flashes>
+                    {% for message in messages %}
+                        <p class="text-info text-center">{{ message }}</p>
+                    {% endfor %}
+                </ul>
+            {% endif %}
+        {% endwith %}
+        <table class="table">
         <tr>
 
             <th>Names</th>
@@ -13,7 +22,7 @@
             <th>Weight</th>
             <th>Height</th>
             <th>Color</th>
-            <th>ID</th>
+            <th>Remove</th>
 
         </tr>
         {% for refugee in refugees %}
@@ -25,11 +34,12 @@
                 <td>{{ refugee[4] }}</td>
                 <td>{{ refugee[5] }}</td>
                 <td>{{ refugee[6] }}</td>
+                <td><a href="/del/{{ refugee[7] }}" class="btn btn-danger btn-sm">Remove</a></td>
             </tr>
         {% endfor %}
-
-
     </table>
-</div>
+    </div>
+
+
 
 {% endblock %}
