--- a/templates/Refugee_form.html
+++ b/templates/Refugee_form.html
@@ -1,12 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Refugee site</title>
+{% extends 'template.html' %}
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-</head>
-<body>
+
+{% block content %}
 <div class="row justify-content-center">
      <div class="col-6">
         {% with messages = get_flashed_messages() %}
@@ -72,5 +67,4 @@
 </div>
 </div>
 
-</body>
-</html>
+{% endblock %}
