--- a/static/error.css
+++ b/static/error.css
@@ -25,3 +25,9 @@ h2{
     background-image: url("../static/img/error.jpg");
     background-color: #500000;
 }
+.justify-content-center
+{
+    margin-top: 100px;
+    padding: 10%;
+
+}
