--- a/templates/template.html
+++ b/templates/template.html
@@ -20,7 +20,7 @@
     </button>
 
     <!-- Navbar links -->
-    <div class="collapse navbar-collapse" id="collapsibleNavbar">
+    <div class="collapse navbar-collapse justify-content-end" id="collapsibleNavbar">
         <ul class="navbar-nav">
             <li class="nav-item">
                 <a class="nav-link" href="/form">Add Refugee</a>
@@ -29,6 +29,9 @@
                 <a class="nav-link" href="/matokeo">View Refugees</a>
             </li>
            <li class="nav-item">
+                <a class="nav-link" href="/update">Update Refugees</a>
+            </li>
+            <li class="nav-item">
                 <a class="nav-link" href="/delete">Remove Refugees</a>
             </li>
 
